# AIAgentHexGame

./: CMakeLists.txt  main.cpp  sujet.md
src/: ExternalProgram_Player.h  Hex_Environement.h  IA_Player.h  mcts.h
